http/indiv.less
@import "mask-inc";

div#indiv, div#ass_indiv {
  div.button-ct {
    width: 100%;

    button {
      width: 32%;
    }

    button.disabled {
      &:hover {
      }
    }

    button.empty{
      opacity: 0;
    }
  }
}

.btn-disabled { .btn2(@gray); }

.btn2(@color) {
  height: 48px;
  padding-left: 11px;
  padding-right: 11px;
  background-color: @white;
  color: @gray;
  font-size: @fs-md;
  line-height: @fs-md;
  border: @color 1px solid;
  border-radius: 1px;
  position: relative;
  overflow: hidden;
  cursor: default;

  &:before {
    content: "";
    width: 12px * sqrt(2);
    height: 12px * sqrt(2);
    background-color: @color;
    position: absolute;
    top: -12px * sqrt(2) / 2;
    left: -12px * sqrt(2) / 2;
    transform: rotate(45deg);
    display: block;
  }
}

